// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DataTable works when fields are a mix of strings and getter functions 1`] = `
<table
  className="table"
>
  <thead>
    <tr>
      <th>
        Title
      </th>
    </tr>
  </thead>
  <tbody>
    <tr
      className=""
    >
      <td>
        Test 2 - Item 1
      </td>
    </tr>
    <tr
      className=""
    >
      <td>
        Test 2 - Item 2
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`DataTable works when fields are simple strings 1`] = `
<table
  className="table"
>
  <thead>
    <tr>
      <th>
        Title
      </th>
    </tr>
  </thead>
  <tbody>
    <tr
      className=""
    >
      <td>
        Test 1 - Item 1
      </td>
    </tr>
    <tr
      className=""
    >
      <td>
        Test 1 - Item 2
      </td>
    </tr>
  </tbody>
</table>
`;
